Nam: Done configure Program, Startup. Configured swagger, DI, exceptions, JwT

--- a/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
+++ b/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
@@ -28,4 +28,9 @@
     <Folder Include="Common\Pagination\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JewelrySalesSystem.Domain\JewelrySalesSystem.Domain.csproj" />
+    <ProjectReference Include="..\JewelrySalesSystem.Infrastructure\JewelrySalesSystem.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
