--- a/JewelrySalesSystem.Domain/JewelrySalesSystem.Domain.csproj
+++ b/JewelrySalesSystem.Domain/JewelrySalesSystem.Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commons\" />
-    <Folder Include="Entities\" />
+    <Folder Include="Entities\Base\" />
     <Folder Include="Functions\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
