--- a/Jewelry_Sales_System/Jewelry_Sales_System.API.csproj
+++ b/Jewelry_Sales_System/Jewelry_Sales_System.API.csproj
@@ -24,14 +24,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Filters\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\JewelrySalesSystem.Application\JewelrySalesSystem.Application.csproj" />
     <ProjectReference Include="..\JewelrySalesSystem.Domain\JewelrySalesSystem.Domain.csproj" />
     <ProjectReference Include="..\JewelrySalesSystem.Infrastructure\JewelrySalesSystem.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
