Nam: add connection string, Demo login API, thêm interface một số base repo thông dụng

--- a/Jewelry_Sales_System/appsettings.json
+++ b/Jewelry_Sales_System/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "local": "Server=(local);Uid=sa;password=12345;Initial Catalog=JeWellryDB;Integrated Security=true;MultipleActiveResultSets=True;Encrypt=False"
   }
 
 }
