--- a/Jewelry_Sales_System/Jewelry_Sales_System.API.csproj
+++ b/Jewelry_Sales_System/Jewelry_Sales_System.API.csproj
@@ -29,4 +29,10 @@
     <ProjectReference Include="..\JewelrySalesSystem.Infrastructure\JewelrySalesSystem.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
