MNhat: Push Code API (Product, Order, OrderDetail, Promotion) on MNhat branch

--- a/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
+++ b/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
@@ -26,6 +26,16 @@
 
   <ItemGroup>
     <Folder Include="Common\Pagination\" />
+    <Folder Include="Diamon\Create\" />
+    <Folder Include="Diamon\Delete\" />
+    <Folder Include="Diamon\GetAll\" />
+    <Folder Include="Diamon\GetByID\" />
+    <Folder Include="Diamon\Update\" />
+    <Folder Include="Gold\Create\" />
+    <Folder Include="Gold\Delete\" />
+    <Folder Include="Gold\GetAll\" />
+    <Folder Include="Gold\GetByID\" />
+    <Folder Include="Gold\Update\" />
   </ItemGroup>
 
   <ItemGroup>
