--- a/Jewelry_Sales_System/appsettings.json
+++ b/Jewelry_Sales_System/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "local": "Server=(local);Uid=sa;password=12345;Initial Catalog=JeWellryDB;Integrated Security=true;MultipleActiveResultSets=True;Encrypt=False;Trusted_Connection=True",
+    "local": "Server=(local);Uid=sa;password=12345;Initial Catalog=JeWellryDB;Integrated Security=true;MultipleActiveResultSets=True;Encrypt=False;",
     "Server": "Host=tiny.db.elephantsql.com;Port=5432;Database=sddyjstn;Username=sddyjstn;Password=iYJz3r3CXB58fPspKFhtkKcnZ0enAK9r;",
     "ServerDocker": "Server=host.docker.internal;Database=JeWellryDB;User Id=sa;Password=12345;MultipleActiveResultSets=True;Encrypt=False"
   },
