--- a/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
+++ b/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
@@ -21,7 +21,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="NinjaNye.SearchExtensions" Version="3.0.1" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.0" />
+	<PackageReference Include="NinjaNye.SearchExtensions" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
