Anh: CRUD for Category

--- a/Jewelry_Sales_System/appsettings.json
+++ b/Jewelry_Sales_System/appsettings.json
@@ -12,7 +12,8 @@
   },
   "Authentication": {
     "Google": {
-      
+      "ClientId": "976317494939-q9aeie0o1jschl0rla9id8bhq3chpcdm.apps.googleusercontent.com",
+      "ClientSecret": "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"
     }
   },
   "Vnpay": {
@@ -27,5 +28,5 @@
   "PaymentCallBack": {
     "ReturnUrl": "https://localhost:7223/payment-callback"
   },
-  "TimeZoneId": "SE Asia Standard Time" // If do not use Windows OS change it to: Asia/Bangkok
+  "TimeZoneId": "SE Asia Standard Time" //If do not use Windows OS change it to: Asia/Bangkok
 }
