--- a/Jewelry_Sales_System/appsettings.json
+++ b/Jewelry_Sales_System/appsettings.json
@@ -20,7 +20,7 @@
     "Locale": "vn"
   },
   "PaymentCallBack": {
-    "ReturnUrl": "https://localhost:7223/payment-callback"
+    "ReturnUrl": "https://localhost:5173/payment.com"
   },
   "TimeZoneId": "SE Asia Standard Time" // If do not us Windown OS change it to: Asia/Bangkok
 }
