Nam: Done Update Order API, remove AllowAnonymouse annotations

--- a/Jewelry_Sales_System/appsettings.json
+++ b/Jewelry_Sales_System/appsettings.json
@@ -26,7 +26,7 @@
     "Locale": "vn"
   },
   "PaymentCallBack": {
-    "ReturnUrl": "https://localhost:5173/payment.com"
+    "ReturnUrl": "http://localhost:5173/payment"
   },
   "TimeZoneId": "SE Asia Standard Time" //If do not use Windows OS change it to: Asia/Bangkok
 }
