Anh: Add filter for category

--- a/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
+++ b/JewelrySalesSystem.Application/JewelrySalesSystem.Application.csproj
@@ -31,4 +31,9 @@
     <ProjectReference Include="..\JewelrySalesSystem.Infrastructure\JewelrySalesSystem.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Category\CurrentCategory\" />
+    <Folder Include="Counter\CurrentCounter\" />
+  </ItemGroup>
+
 </Project>
