Nam: SendMail service, update register, done create account, fix VnPay callback, fix dto

--- a/Jewelry_Sales_System/appsettings.json
+++ b/Jewelry_Sales_System/appsettings.json
@@ -25,6 +25,15 @@
     "Version": "2.1.0",
     "Locale": "vn"
   },
+  "EmailSettings": {
+    "MailServer": "smtp-mail.outlook.com",
+    "MailPort": 587,
+    "UseSsl": true,
+    "SenderEmail": "asm2.namphse@outlook.com",
+    "SenderName": "Phan Nam",
+    "Username": "asm2.namphse@outlook.com",
+    "Password": "phannam112"
+  },
   "PaymentCallBack": {
     "ReturnUrl": "http://localhost:5173/payment"
   },
